UI/src/less/site/asset-form.less
//== Asset form

#feature-attributes {
  z-index: 1010;

  header {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    border-bottom: 1px solid @gray-darker-2;
    font-size: @font-size-xl;
    color: #fff;

    span {
      display: block;
      padding: @line-height-modifier * 2;
      line-height: (@line-height-modifier * 5) + 2;
    }
  }

  .wrapper {
    position: absolute;
    top: 48px;
    left: 0;
    right: 0;
    bottom: 128px;
    overflow-y: auto;
    padding: 10px;

    &.read-only {
      bottom: 80px;
    }
  }

  .form-controls {
    position: absolute;
    bottom: 80px;
    left: 0;
    right: 0;
    padding: 10px;
    border-top: 1px solid @gray-darker-2;
    text-align: right;

    .save {
      margin-right: 5px;
    }
  }

  header {
    .form-controls {
      bottom: 0;
      left: auto;
      border-top-color: transparent;
    }
  }

  .street-view {
    display: block;
    margin-bottom: @input-margin;

    img {
      display: block;
      width: 360px;
      height: 180px;
    }
  }

  .form-notification {
    @form-notification-border: 2px;
    padding: (@line-height-modifier * 2) - @form-notification-border;
    border: @form-notification-border solid @warning;

    p {
      position: relative;
      margin: 0;
      padding-left: 30px;
      color: @gray-lightest;

      &:before {
        position: absolute;
        top: 0;
        left: 0;
        font-family: @font-family-icons;
        font-size: @font-icon-size-base;
        color: @warning;
        content: '\e805';
      }      
    }
  }

  .form {
    width: 360px;

    .asset-log-info {
      font-size: @font-size-small;
      line-height: @line-height-modifier * 3;
      color: @input-color-placeholder-dark;
    }

    a {
      color: @input-color-placeholder-dark;
      text-decoration: underline;
    }

    a.incomplete-links, .unknown-speed-limits, .floating-stops {
      position:absolute;
      right: 10px;
      bottom: 130px;
    }

    .undefined {
      font-style: italic;
      color: @gray-dark;
    }

    ul {
      margin: 0;
      padding: 0;
      color: #fff;
      list-style: none;

      li {
        padding-top: @line-height-modifier + 1;
        line-height: @line-height-modifier * 3;
      }
    }
  }

  .form-horizontal {
    .control-label {
      width: 140px;
      margin-right: 10px;
      font-size: @font-size-xs;
      margin-top: 5px;
    }

    .form-control,
    .checkbox,
    .select,
    .form-control-static,
    .choice-group,
    .btn-block,
    .input-group {
      width: 210px;
      margin-top: 6px;
    }

    .input-group {
      .form-control {
        width: 100%;
      }
    }

    .asset-log-info {
      float: none;
      width: 100%;
      padding-top: 0;
      padding-bottom: 0;
    }
  }

  .form-manoeuvre {
    .control-label {
      width: 100%;
      margin-left: 10px;
      margin-bottom: 10px;
      text-align: left;
    }

    .adjacent-link, .manoeuvre {
      .exception-hidden {
        display:none;
      }
      margin-left: 10px;

      .form-control-static {
        width: auto;
        margin-right: 10px;
      }

      .checkbox {
        width: auto;
      }

      input[type="checkbox"] {
        margin: 6px 6px 0 0;
      }

      label {
        width: 100%;
        font-size: @font-size-small;
        line-height: @line-height-modifier * 3;
        margin-left: 18px;
        color: @input-color-placeholder-dark;
        text-transform: none;
        font-weight: normal;
      }

      select.new-exception {
        margin-left: 18px;
        color: @input-color-placeholder-dark;
      }
      input[type="text"].additional-info {
        margin-left: 18px;
      }
    }
  }

  .edit-mode {
    label.control-label.required:before {
      content: '* ';
    }

    label.control-label.required {
      color: @warning;
    }
  }

  span.validation-error {
    color: @warning;
    padding-right: (@line-height-modifier*2) * 1px;
    font-size: @font-size-small;
  }
}

#information-content {
  a {
    z-index: 1011;
    color: @input-color-placeholder-dark;
    text-decoration: underline;
  }

  a.incomplete-links, .unknown-speed-limits, .floating-stops {
    position:absolute;
    right: 10px;
    bottom: 145px;
    text-transform: uppercase;
  }
}

